<resources>

    <string name="app_name">Dedsec Mobile</string>

    <string name="label_email">Correo Electronico</string>
    <string name="label_passwd">Contraseña</string>
    <string name="label_name">Nombres</string>
    <string name="label_lastname">Apellidos</string>

    <string name="email_hint">usuario@dominio.com</string>
    <string name="nombre_hint">Nombre</string>
    <string name="description_hint">Description</string>
    <string name="name_hint">Nombres</string>
    <string name="lastname_hint">Apellidos</string>
    <string name="chipcode_hint">Ingrese el codigo del chip</string>
    <string name="petName_hint">Ingrese el nombre de la mascota</string>
    <string name="nameOwner_hint">Ingrese el nombre del dueño</string>
    <string name="addressOwner_hint">Ingrese la direccion del dueño</string>
    <string name="mqtt_hint">Ingrese un mensaje</string>

    <string name="btn_ingress">Ingresar</string>
    <string name="btn_reproducir">Reproducir Sonido</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_registry">Crear Cuenta</string>
    <string name="btn_sendData">Enviar Datos</string>
    <string name="btn_loadData">Cargar Datos</string>
    <string name="btn_mqttSendData">Enviar Mensaje</string>

    <string name="geo_service">Geo Service</string>
    <string name="recycler">Image Service</string>
    <string name="mediaservice">Media Service</string>
    <string name="crud_sqlite">Crud SQLite</string>
    <string name="firebase_integration">Integracion Firebase</string>
    <string name="mqtt_integration">Integracion MQTT</string>

    <string name="control_animales">Fomulario de ingreso de mascotas</string>
    <string name="pet_sp">Mascota</string>
    <string name="mqtt_message">Mensaje Recibido</string>

</resources>