<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dedsec_dark"
    android:orientation="vertical"
    tools:context=".CrudSQLite">

    <!-- Campo de entrada para el nombre -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:padding="15dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre_hint"
        android:background="@color/dedsec_light"
        android:textColor="@color/dedsec_aux" />

    <!-- Campo de entrada para la descripción -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:padding="15dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/description_hint"
        android:background="@color/dedsec_light"
        android:textColor="@color/dedsec_aux" />

    <!-- Botones para operaciones CRUD -->
    <Button
        android:id="@+id/buttonAdd"
        android:text="@string/btn_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:backgroundTint="@color/dedsec_aux"
        android:textColor="@color/dedsec_dark"
        android:paddingHorizontal="10dp" />
    <Button
        android:id="@+id/buttonUpdate"
        android:text="@string/btn_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:backgroundTint="@color/dedsec_aux"
        android:textColor="@color/dedsec_dark"
        android:paddingHorizontal="10dp" />
    <Button
        android:id="@+id/buttonDelete"
        android:text="@string/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:backgroundTint="@color/dedsec_aux"
        android:textColor="@color/dedsec_dark"
        android:paddingHorizontal="10dp" />

    <!-- ListView para mostrar los elementos -->
    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>